<resources>
    <string name="example_fragment_5_title">Example 5</string>

    <string name="info">Info</string>
    <string name="warning">Warning</string>
    <string name="caution">Caution</string>

    <string name="clear">clear</string>
    <string name="activated">activated</string>
    <string name="selected">selected</string>
    <string name="disabled">disabled</string>
    <string name="hovered">hovered</string>
</resources>
