<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/info"
        style="@style/TitleText"
        android:text="@string/info"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/circleInfo"/>

    <FrameLayout
        android:id="@+id/circleInfo"
        style="@style/FrameLayout"
        android:foreground="@drawable/s5_circle_overlay_white"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/roundRectangleInfo"
        app:layout_constraintTop_toBottomOf="@id/info"
        app:layout_constraintBottom_toTopOf="@id/warning">
        <android.support.v7.widget.AppCompatImageView
            style="@style/FrameLayout.Icon"
            android:src="@drawable/ic_android_24dp"
            android:background="@drawable/s5_circle"
            app:tint="@android:color/white"
            app:backgroundTint="@color/info"/>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/roundRectangleInfo"
        style="@style/FrameLayout"
        android:foreground="@drawable/s5_round_rectangle_overlay_white"
        app:layout_constraintStart_toEndOf="@id/circleInfo"
        app:layout_constraintEnd_toStartOf="@id/circleInfoOverlay"
        app:layout_constraintTop_toTopOf="@id/circleInfo"
        app:layout_constraintBottom_toBottomOf="@id/circleInfo">

        <android.support.v7.widget.AppCompatImageView
            style="@style/FrameLayout.Icon"
            android:src="@drawable/ic_android_24dp"
            android:background="@drawable/s5_round_rectangle"
            app:tint="@android:color/white"
            app:backgroundTint="@color/info"/>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/circleInfoOverlay"
        style="@style/FrameLayout"
        android:src="@drawable/ic_android_24dp"
        android:foreground="@drawable/s5_circle_overlay_black"
        app:layout_constraintStart_toEndOf="@id/roundRectangleInfo"
        app:layout_constraintEnd_toStartOf="@id/roundRectangleInfoOverlay"
        app:layout_constraintTop_toTopOf="@id/circleInfo"
        app:layout_constraintBottom_toBottomOf="@id/circleInfo">

        <android.support.v7.widget.AppCompatImageView
            style="@style/FrameLayout.Icon"
            android:src="@drawable/ic_android_24dp"
            android:duplicateParentState="true"
            android:background="@drawable/s5_circle"
            app:tint="@color/s5_icon_overlay_info"
            app:backgroundTint="@color/s5_overlay_info"/>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/roundRectangleInfoOverlay"
        style="@style/FrameLayout"
        android:src="@drawable/ic_android_24dp"
        android:foreground="@drawable/s5_round_rectangle_overlay_black"
        app:layout_constraintStart_toEndOf="@id/circleInfoOverlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/circleInfo"
        app:layout_constraintBottom_toBottomOf="@id/circleInfo">

        <android.support.v7.widget.AppCompatImageView
            style="@style/FrameLayout.Icon"
            android:src="@drawable/ic_android_24dp"
            android:duplicateParentState="true"
            android:background="@drawable/s5_round_rectangle"
            app:tint="@color/s5_icon_overlay_info"
            app:backgroundTint="@color/s5_overlay_info"/>
    </FrameLayout>

    <TextView
        android:id="@+id/warning"
        style="@style/TitleText"
        android:text="@string/warning"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/circleInfo"
        app:layout_constraintBottom_toTopOf="@id/circleWarning"/>

    <FrameLayout
        android:id="@+id/circleWarning"
        style="@style/FrameLayout"
        android:foreground="@drawable/s5_circle_overlay_white"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/roundRectangleWarning"
        app:layout_constraintTop_toBottomOf="@id/warning"
        app:layout_constraintBottom_toTopOf="@id/caution">
        <android.support.v7.widget.AppCompatImageView
            style="@style/FrameLayout.Icon"
            android:src="@drawable/ic_android_24dp"
            android:background="@drawable/s5_circle"
            app:tint="@android:color/white"
            app:backgroundTint="@color/warning"/>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/roundRectangleWarning"
        style="@style/FrameLayout"
        android:foreground="@drawable/s5_round_rectangle_overlay_white"
        app:layout_constraintStart_toEndOf="@id/circleWarning"
        app:layout_constraintEnd_toStartOf="@id/circleWarningOverlay"
        app:layout_constraintTop_toTopOf="@id/circleWarning"
        app:layout_constraintBottom_toBottomOf="@id/circleWarning">

        <android.support.v7.widget.AppCompatImageView
            style="@style/FrameLayout.Icon"
            android:src="@drawable/ic_android_24dp"
            android:background="@drawable/s5_round_rectangle"
            app:tint="@android:color/white"
            app:backgroundTint="@color/warning"/>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/circleWarningOverlay"
        style="@style/FrameLayout"
        android:src="@drawable/ic_android_24dp"
        android:foreground="@drawable/s5_circle_overlay_black"
        app:layout_constraintStart_toEndOf="@id/roundRectangleWarning"
        app:layout_constraintEnd_toStartOf="@id/roundRectangleWarningOverlay"
        app:layout_constraintTop_toTopOf="@id/circleWarning"
        app:layout_constraintBottom_toBottomOf="@id/circleWarning">

        <android.support.v7.widget.AppCompatImageView
            style="@style/FrameLayout.Icon"
            android:src="@drawable/ic_android_24dp"
            android:duplicateParentState="true"
            android:background="@drawable/s5_circle"
            app:tint="@color/s5_icon_overlay_warning"
            app:backgroundTint="@color/s5_overlay_warning"/>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/roundRectangleWarningOverlay"
        style="@style/FrameLayout"
        android:src="@drawable/ic_android_24dp"
        android:foreground="@drawable/s5_round_rectangle_overlay_black"
        app:layout_constraintStart_toEndOf="@id/circleWarningOverlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/circleWarning"
        app:layout_constraintBottom_toBottomOf="@id/circleWarning">

        <android.support.v7.widget.AppCompatImageView
            style="@style/FrameLayout.Icon"
            android:src="@drawable/ic_android_24dp"
            android:duplicateParentState="true"
            android:background="@drawable/s5_round_rectangle"
            app:tint="@color/s5_icon_overlay_warning"
            app:backgroundTint="@color/s5_overlay_warning"/>
    </FrameLayout>

    <TextView
        android:id="@+id/caution"
        style="@style/TitleText"
        android:text="@string/caution"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/circleWarning"
        app:layout_constraintBottom_toTopOf="@id/circleCaution"/>

    <FrameLayout
        android:id="@+id/circleCaution"
        style="@style/FrameLayout"
        android:foreground="@drawable/s5_circle_overlay_white"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/roundRectangleCaution"
        app:layout_constraintTop_toBottomOf="@id/caution"
        app:layout_constraintBottom_toTopOf="@id/clear">
        <android.support.v7.widget.AppCompatImageView
            style="@style/FrameLayout.Icon"
            android:src="@drawable/ic_android_24dp"
            android:background="@drawable/s5_circle"
            app:tint="@android:color/white"
            app:backgroundTint="@color/caution"/>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/roundRectangleCaution"
        style="@style/FrameLayout"
        android:foreground="@drawable/s5_round_rectangle_overlay_white"
        app:layout_constraintStart_toEndOf="@id/circleCaution"
        app:layout_constraintEnd_toStartOf="@id/circleCautionOverlay"
        app:layout_constraintTop_toTopOf="@id/circleCaution"
        app:layout_constraintBottom_toBottomOf="@id/circleCaution">

        <android.support.v7.widget.AppCompatImageView
            style="@style/FrameLayout.Icon"
            android:src="@drawable/ic_android_24dp"
            android:background="@drawable/s5_round_rectangle"
            app:tint="@android:color/white"
            app:backgroundTint="@color/caution"/>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/circleCautionOverlay"
        style="@style/FrameLayout"
        android:foreground="@drawable/s5_circle_overlay_black"
        app:layout_constraintStart_toEndOf="@id/roundRectangleCaution"
        app:layout_constraintEnd_toStartOf="@id/roundRectangleCautionOverlay"
        app:layout_constraintTop_toTopOf="@id/circleCaution"
        app:layout_constraintBottom_toBottomOf="@id/circleCaution">

        <android.support.v7.widget.AppCompatImageView
            style="@style/FrameLayout.Icon"
            android:src="@drawable/ic_android_24dp"
            android:duplicateParentState="true"
            android:background="@drawable/s5_circle"
            app:tint="@color/s5_icon_overlay_caution"
            app:backgroundTint="@color/s5_overlay_caution"/>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/roundRectangleCautionOverlay"
        style="@style/FrameLayout"
        android:foreground="@drawable/s5_round_rectangle_overlay_black"
        app:layout_constraintStart_toEndOf="@id/circleCautionOverlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/circleCaution"
        app:layout_constraintBottom_toBottomOf="@id/circleCaution">

        <android.support.v7.widget.AppCompatImageView
            style="@style/FrameLayout.Icon"
            android:src="@drawable/ic_android_24dp"
            android:duplicateParentState="true"
            android:background="@drawable/s5_round_rectangle"
            app:tint="@color/s5_icon_overlay_caution"
            app:backgroundTint="@color/s5_overlay_caution"/>
    </FrameLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/clear"
        style="@style/Button"
        android:text="@string/clear"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintTop_toBottomOf="@id/circleCaution"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/radioGroup"/>

    <RadioGroup
        android:id="@+id/radioGroup"
        style="@style/RadioGroup"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/clear"
        app:layout_constraintBottom_toBottomOf="parent">

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/activated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activated"/>

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/selected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selected"/>

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/disabled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/disabled"/>

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/hovered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hovered"/>
    </RadioGroup>
</android.support.constraint.ConstraintLayout>